--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -56,11 +56,13 @@
     <!--requires preferences for rendering-->
     <article class="flex two" style="padding: 3em 1em;">
         <div>
-            {% if preferences is not none and preferences|length > 0 %}
+            {% if preferences is not none and preferences|length > 0%}
             <h1>Music Preferences</h1>
             {% for preference in preferences %}
             <li> {{ preference["name"] + " - " + preference["artists"] }}</li>
             {% endfor %}
+            {% endif %}
+            {% if preferences is not none and preferences|length >= 10%}
             <form action="/" method="post">
                 <button name="recommend" type="submit" value="True">Get Suggestions</button>
             </form>
